# sxapi

./: .buildinfo  .coveragerc  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  README.md  README.rst  authors.html  changelog.html  contributing.html  genindex.html  index.html  license.html  objects.inv  pull_request_template.md  py-modindex.html  readme.html  search.html  searchindex.js  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs_publish.yml  run_tests.yml
_modules/: index.html
_modules/sxapi/: base.html  integrationV2.html  publicV2.html
_modules/sxapi/cli/: cli.html  cli_user.html
_modules/sxapi/cli/subparser/: get_sensor_data.html  token.html
_modules/sxapi/integrationV2/: accounts.html  organisations.html  tranlations.html  users.html
_modules/sxapi/publicV2/: alarms.html  animalgroups.html  animals.html  data.html  devices.html  events.html  feedrations.html  groups.html  notes.html  observation_groups.html  organisations.html  sensordata.html  shares.html  todos.html  users.html
_sources/api/: modules.rst.txt  sxapi.cli.rst.txt  sxapi.cli.subparser.rst.txt  sxapi.integrationV2.rst.txt  sxapi.publicV2.rst.txt  sxapi.rst.txt
_static/: documentation_options.js
api/: modules.html  sxapi.cli.html  sxapi.cli.subparser.html  sxapi.html  sxapi.integrationV2.html  sxapi.publicV2.html
docs/: conf.py  index.rst
src/sxapi/: __init__.py  base.py  cli.py  cli_sub_parser.py  credentials.py  errors.py  skeleton.py
src/sxapi/cli/: __init__.py  cli.py  cli_sub_parser.py  cli_user.py  credentials.py  example-config.conf  example-config.toml  helper.py
src/sxapi/cli/subparser/: get_sensor_data.py  token.py
src/sxapi/integrationV2/: __init__.py  accounts.py  organisations.py  tranlations.py  users.py
src/sxapi/publicV2/: __init__.py  alarms.py  animalgroups.py  animals.py  data.py  devices.py  events.py  feedrations.py  groups.py  notes.py  observation_groups.py  organisations.py  sensordata.py  shares.py  todos.py  users.py
tests/: conftest.py  test_base.py  test_cli.py  test_publicV2.py  test_skeleton.py
tests/cli_tests/: test-config.conf  test-config_param.conf  test_cli.py  test_gsd_subparser.py  test_token_subparser.py
tests/test_integrationV2/: test_intgr_accounts.py  test_intgr_organisations.py  test_intgr_translations.py  test_intgr_users.py
tests/test_publicV2/: test_alarms.py  test_animalgroups.py  test_animals.py  test_data.py  test_devices.py  test_events.py  test_feedrations.py  test_get_sensor_data.py  test_groups.py  test_notes.py  test_observation_groups.py  test_organisations.py  test_shares.py  test_todos.py  test_users.py
