# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.readthedocs.io/en/stable/userguide/declarative_config.html

[metadata]
name = sxapi
description = new library to interface with the smaXtec system
author = smaXtec
author_email = support@smaxtec.com
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyscaffold/pyscaffold/
# Add here related links, for example:
project_urls =
    Documentation = https://pyscaffold.org/
    Source = https://github.com/smaxtec/sxapi/
    # Changelog = https://github.com/smaxtec/sxapi/
    Tracker = https://github.com/smaxtec/sxapi/issues
    Download = https://pypi.org/project/sxapi/#files

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"
    setuptools>=46.1.0
    setuptools_scm>=5
    requests
    keyring

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install sxapi[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov
    mock

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = sxapi.module:function
# For example:
# console_scripts =
#     fibonacci = sxapi.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
console_scripts =
  sxapi = sxapi.cli:cli_run

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
    --cov sxapi --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[isort]
# configurations for isort import style checker
# See configuration detail in https://pycqa.github.io/isort/docs/configuration/options.html
profile = black
multi_line_output = 3
force_grid_wrap = 2

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.1
package = sxapi
